# blue-pill-quickstart

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config
.github/workflows/: rust.yml
src/: main.rs
