[package]
authors = ["Your Name"]
edition = "2018"
readme = "README.md"
name = "blue-pill-quickstart"
version = "0.1.0"

[dependencies]
stm32f1xx-hal = { version = "0.5.3", features = ["rt", "stm32f103" ] }
cortex-m = "0.6.2"
cortex-m-rt = { version = "0.6.12", features = ["device"] }
panic-halt = "0.2.0"
panic-semihosting = "0.5.3"

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

# this lets you use `cargo fix`!
[[bin]]
name = "blue-pill-quickstart"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
